# UplayR2Unlocker

./: .gitignore  CMakeLists.txt  Config.json  LICENSE.txt  README.md  UplayR2Unlocker.json  UplayR2Unlocker.jsonc  UplayR2Unlocker.sln  build.ps1  vcpkg.json
.github/workflows/: build-project.yml  ci.yml
LinkerExportsGenerator/: LinkerExportsGenerator.cpp  LinkerExportsGenerator.vcxproj  LinkerExportsGenerator.vcxproj.filters
UplayR2Unlocker/: Config.cpp  Config.h  Config.json  LinkerExports.h  LinkerExports32.h  LinkerExports64.h  Logger.cpp  Logger.h  UplayR2Unlocker.aps  UplayR2Unlocker.filters  UplayR2Unlocker.rc  UplayR2Unlocker.vcxproj  UplayR2Unlocker.vcxproj.filters  dllmain.cpp  framework.h  resource.h  upc.cpp  upc.h  util.cpp  util.h
res/: UplayR2Unlocker.jsonc  extra_build_config.gen.h
src/: main.cpp  pch.hpp
src/config/: config.cpp  config.hpp
src/hooker/: hooker.cpp  hooker.hpp
src/unlocker/: unlocker.cpp  unlocker.hpp
src/upc/: upc.cpp  upc.hpp
